# JobFinder

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  streamlit_app.py
cv/: example_cv.json
src/jobfinder/: __init__.py  config.py  db.py  locations.py  matching.py  models.py  schema.py  server.py  submit.py  textutil.py
src/jobfinder/connectors/: __init__.py  adzuna.py  base.py  greenhouse.py  themuse.py
src/jobfinder/cv/: __init__.py  content.py  diff.py  render.py  tailor.py
src/jobfinder/pipeline/: __init__.py  applications.py  ingest.py  search.py
tests/: test_adzuna.py  test_applications.py  test_cv.py  test_greenhouse.py  test_ingest.py  test_locations.py  test_matching.py  test_server.py  test_skeleton.py  test_submit.py  test_tailor.py  test_themuse.py
